--- a/Imc/Components/ResultadoImcModal.razor
+++ b/Imc/Components/ResultadoImcModal.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JSRuntime
 @using System.Text.Json
 
-<section id="imcResultadoModal" class="elementToFadeOut principalContainer principalContainerBigScreen principalContainerSmallScreen">
+<section id="imcResultadoModal" class="elementToFadeOut principalContainer principalContainerBigScreen principalContainerSmallScreen" style="width: 260px">
     @switch (MessagemSelecionada)
     {
         case TipoMensagem.AbaixoDoPeso:
