--- a/Imc/Pages/Calculadora.razor
+++ b/Imc/Pages/Calculadora.razor
@@ -14,9 +14,9 @@
     </div>
     <div class="inputSmallScreenContainer">
         <label>Peso[Kg]: </label>
-        <input required id="peso" class="input inputTinyScreen" type="number" @bind="Peso" />
+        <input required id="peso" class="input inputTinyScreen" type="number" style="margin-left: 5.25px;" @bind="Peso" />
     </div>
-    <select required class="input" @bind="Sexo">
+    <select required class="input inputTinyScreen" @bind="Sexo">
         <option selected value="">Selecione seu sexo.</option>
         <option value="masculino">Masculino</option>
         <option value="feminino">Feminino</option>
