--- a/Imc/Pages/Historico.razor
+++ b/Imc/Pages/Historico.razor
@@ -10,7 +10,8 @@
     </div>
     <input required class="input inputTinyScreen barraPesquisa barraPesquisaSmall" type="text" placeholder="Pesquisar..." />
     <div class="horizontalDivisor"></div>
-    <div id="historicoLista"></div>
+    <div id="historicoLista" class="verticalScroll" style="max-height: 380px"></div>
+    <div class="horizontalDivisor"></div>
     <button class="btn btnSecondary" onclick="window.location.href='/calculadora'">Voltar</button>
 </section>
 
