--- a/Imc/wwwroot/css/carnaCode.css
+++ b/Imc/wwwroot/css/carnaCode.css
@@ -3,6 +3,25 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+.verticalScroll {
+    overflow-y: auto;
+    padding: 15px;
+}
+
+.verticalScroll::-webkit-scrollbar {
+    background: #00000000; 
+    width: 5px;
+    border-radius: 50%;
+}
+
+.verticalScroll::-webkit-scrollbar-thumb {
+    background: #7102e085;
+}
+
+.verticalScroll::-webkit-scrollbar-thumb:hover {
+    background: #6610f2;
+}
+
 .inputLogin {
     width: 95%;
 }
@@ -142,7 +161,7 @@
 @media only screen and (min-width: 360px) {
 
     .principalContainerBigScreen {
-        width: 260px;
+        width: 360px;
     }
 }
 
@@ -152,7 +171,7 @@
     }
 
     .principalContainerSmallScreen {
-        width: 200px;
+        width: 270px;
     }
 
     .inputSmallScreenContainer {
@@ -160,6 +179,10 @@
         flex-wrap: nowrap;
         align-items: center;
         gap: 5px;
+    }
+    .inputTinyScreen {
+        max-width: 150px;
+        margin-left: 5px;
     }
 }
 
@@ -169,7 +192,7 @@
     }
 
     .principalContainerSmallScreen {
-        width: 180px;
+        width: 220px;
     }
 
     .inputSmallScreenContainer {
@@ -177,6 +200,11 @@
         flex-wrap: nowrap;
         align-items: center;
         gap: 5px;
+    }
+
+    .inputTinyScreen {
+        max-width: 100px;
+        margin-left: 5px;
     }
 
     .historySmallScreenFontSite {
@@ -201,7 +229,7 @@
     }
 
     .principalContainerSmallScreen {
-        width: 160px;
+        width: 220px;
     }
 
     .inputSmallScreenContainer {
@@ -213,7 +241,7 @@
     }
 
     .inputTinyScreen {
-        max-width: 150px;
+        max-width: 100px;
         margin-left: 5px;
     }
 }
