--- a/Imc/Pages/Login.razor
+++ b/Imc/Pages/Login.razor
@@ -11,7 +11,7 @@
     </span>
     <br>
     <div class="inputSmallScreenContainer">
-        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="E-mail" @bind="Email"/>
+        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="UserName" @bind="Email"/>
     </div>
     <div class="inputSmallScreenContainer">
         <input id="senha" class="input inputLogin inputTinyScreen" type="password" placeholder="Senha" @bind="Senha" />
