--- a/Imc/Pages/RecuperarLogin.razor
+++ b/Imc/Pages/RecuperarLogin.razor
@@ -10,7 +10,7 @@
     </span>
     <br>
     <div class="inputSmallScreenContainer">
-        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="E-mail" @bind="Email"/>
+        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="UserName" @bind="Email"/>
     </div>
     <div>
         <input id="notRobot" type="checkbox" />
