--- a/Imc/Pages/Cadastro.razor
+++ b/Imc/Pages/Cadastro.razor
@@ -10,10 +10,10 @@
     </span>
     <br>
     <div class="inputSmallScreenContainer">
-        <input id="name" class="input inputLogin inputTinyScreen" type="text" placeholder="Seu username" />
+        <input id="name" class="input inputLogin inputTinyScreen" type="text" placeholder="Seu nome" />
     </div>
     <div class="inputSmallScreenContainer">
-        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="Seu melhor e-mail" />
+        <input id="email" class="input inputLogin inputTinyScreen" type="email" placeholder="Seu UserName" />
     </div>
     <div class="inputSmallScreenContainer">
         <input id="senha" class="input inputLogin inputTinyScreen" type="password" placeholder="Crie uma senha" />
