testando ajuda do adorno

--- a/Imc/Pages/Login.razor
+++ b/Imc/Pages/Login.razor
@@ -22,7 +22,7 @@
     </div>
     <div class="horizontalDivisor"></div>
     <button class="btn btnPrimary" @onclick="Checking">Fazer Login</button>
-    <button class="btn btnSecondary" onclick="window.location.href='./cadastro'">Não tenho um acesso</button>
+    <button class="btn btnSecondary" onclick="window.location.href='cadastro'">Não tenho um acesso</button>
     <button class="btn btnSecondary" onclick="window.location.href='/recuperarLogin'">Recuperar login</button>
 </section>
 
